<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/gradient_background"
  tools:context=".WildlifeActivity">

  <LinearLayout
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/header"
    app:layout_constraintVertical_bias="0.0">

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <ImageView
          android:id="@+id/imageView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="16dp"
          android:contentDescription="@string/button_group"
          tools:srcCompat="@drawable/park_buttons" />

        <TextView
          android:id="@+id/intro_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:maxLines="5"
          android:textAlignment="center"
          android:textAppearance="@style/Text"
          tools:text="Intro Text" />
      </LinearLayout>

      <TextView
        android:id="@+id/intro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary_blue"
        android:paddingHorizontal="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TitleText"
        tools:text="@string/denali" />

    </FrameLayout>

    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
        android:id="@+id/direction_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:background="@drawable/border_direction"
        android:orientation="vertical">

        <ImageView
          android:id="@+id/direction_map"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:adjustViewBounds="true"
          android:contentDescription="@string/park_map"
          app:srcCompat="@drawable/park_map" />

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="24dp"
          android:paddingBottom="16dp"
          android:paddingStart="32dp"
          android:paddingEnd="32dp"
          android:orientation="vertical">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
              android:id="@+id/direction_location_title"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:gravity="center_vertical"
              android:maxLines="3"
              android:textAppearance="@style/Text"
              tools:text="Location:" />

            <TextView
              android:id="@+id/direction_location_text"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:gravity="center_vertical"
              android:maxLines="3"
              android:textAppearance="@style/Text"
              tools:text="Bettles, AK" />

          </LinearLayout>

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
              android:id="@+id/direction_address_title"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:gravity="center_vertical"
              android:maxLines="3"
              android:textAppearance="@style/Text"
              tools:text="Physical Address:" />

            <TextView
              android:id="@+id/direction_address_text"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:gravity="center_vertical"
              android:maxLines="3"
              android:textAppearance="@style/Text"
              tools:text="101 Dunkel St Fairbanks, AK 99701" />

          </LinearLayout>
        </LinearLayout>

      </LinearLayout>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/direction_title"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:layout_gravity="center_horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintWidth_percent="0.4"
          app:srcCompat="@drawable/direction_button" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

  </LinearLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="150dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageButton
      android:id="@+id/back_button"
      android:layout_width="40dp"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:background="?android:attr/selectableItemBackground"
      android:contentDescription="@string/back_button"
      android:scaleType="fitCenter"
      android:src="@drawable/back_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/header_image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:src="@drawable/back_button"
      tools:srcCompat="@drawable/back_button" />

    <ImageButton
      android:id="@+id/more_button"
      android:layout_width="40dp"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:background="?android:attr/selectableItemBackground"
      android:contentDescription="@string/more_button"
      android:scaleType="fitCenter"
      android:src="@drawable/more_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/header_image"
      app:layout_constraintTop_toTopOf="parent"
      tools:src="@drawable/more_button"
      tools:srcCompat="@drawable/more_button" />

    <ImageView
      android:id="@+id/header_image"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:adjustViewBounds="true"
      android:contentDescription="@string/park_image"
      android:scaleType="fitCenter"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintWidth_percent="0.3"
      tools:srcCompat="@drawable/denali" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>